# fastapi_rest_pizza_delivery

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
rest_pizza_delivery/: main.py
rest_pizza_delivery/db/: db_config.py  db_init.py  db_models.py
rest_pizza_delivery/routes/: route_auth.py  route_order.py
rest_pizza_delivery/schemas/: schemas.py
